# chrome2moz

./: CHROME_ONLY_API_IMPLEMENTATION_STATUS.md  Cargo.toml  README.md  build-wasm.sh
src/: lib.rs  main.rs
src/analyzer/: api.rs  keyboard_shortcuts.rs  manifest.rs
src/models/: chrome_only.rs  conversion.rs
src/packager/: mod.rs
src/parser/: javascript.rs
src/report/: generator.rs
src/transformer/: javascript.rs  manifest.rs  mod.rs
src/validator/: mod.rs  structure.rs
web/: README.md  index.html  styles.css
